<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-120dp"
        android:background="@drawable/background_layer_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#355d51"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/top_bar"
        app:layout_constraintEnd_toEndOf="@+id/top_bar"
        app:layout_constraintStart_toStartOf="@+id/top_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoutLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/logout_logo"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/galleryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/recupererTatouage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />



    <View
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#355d51"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/watermarkLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:contentDescription="@string/styloLogo"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toStartOf="@+id/bottom_bar"
        app:layout_constraintTop_toTopOf="@+id/bottom_bar"
        app:srcCompat="@drawable/stylo" />

    <ImageView
        android:id="@+id/handLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/handLogo"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toStartOf="@+id/galleryLogo"
        app:layout_constraintStart_toEndOf="@+id/watermarkLogo"
        app:layout_constraintTop_toTopOf="@+id/bottom_bar"
        app:srcCompat="@drawable/mains" />

    <ImageView
        android:id="@+id/galleryLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:contentDescription="@string/galleryLogo"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="@+id/bottom_bar"
        app:layout_constraintTop_toTopOf="@+id/bottom_bar"
        app:srcCompat="@drawable/galerie" />

    <LinearLayout
        android:id="@+id/watermarkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/galleryText"
        android:visibility="visible">

        <TextView
            android:id="@+id/watermarkTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choixTatouage"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioImage2"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:text="@string/image"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioText2"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:text="@string/texte"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/selectImageWatermarked"
        style="@style/ButtonCustomStyle"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_mail_pass"
        android:text="@string/selectionnerImage"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watermarkLayout"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/watermarkPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/selectImageWatermarked"
        android:visibility="visible"/>

    <Button
        android:id="@+id/exportImage"
        style="@style/ButtonCustomStyle"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_login_button"
        android:text="@string/exportTatouage"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watermarkPassword"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>


