<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-120dp"
        android:background="@drawable/background_layer_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#355d51"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/top_bar"
        app:layout_constraintEnd_toEndOf="@+id/top_bar"
        app:layout_constraintStart_toStartOf="@+id/top_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/rounded_corner_mail_pass"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <ImageView
            android:id="@+id/mailLogo"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/mail_logo"
            android:scaleType="centerCrop"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:srcCompat="@drawable/mail" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColorHint="#78928a" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_mail_pass"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/passLogo"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/mail_logo"
            android:scaleType="centerCrop"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/mdp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="#78928a" />


    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_corner_login_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_mail_pass"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>